Update character select page format

--- a/Crawl/Crawl/Views/Battle/OpeningPage.xaml
+++ b/Crawl/Crawl/Views/Battle/OpeningPage.xaml
@@ -19,7 +19,7 @@
                    
                     <Picker Title="Narwhal 1"
                             TextColor="Teal"
-                            ItemsSource="{Binding Characters}"
+                            ItemsSource="{Binding Data}"
                             ItemDisplayBinding="{Binding Name}" />
                 </StackLayout>
                 
