--- a/Crawl/Crawl/Views/Battle/OpeningPage.xaml
+++ b/Crawl/Crawl/Views/Battle/OpeningPage.xaml
@@ -2,30 +2,117 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Crawl.Views.OpeningPage"
-             Title="Manual Battle">
+             Title="Narwhal Select">
+    
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Next" Clicked="OnNextClicked" />
+    </ContentPage.ToolbarItems>
+    
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Select Narwhals"
-                   FontSize="Medium"
-                   FontAttributes="Bold"
-                   TextColor="Teal"
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout HorizontalOptions="CenterAndExpand">
+                
+                <Label Text="Available Narwhals" 
+                       HorizontalTextAlignment="Center"
+                       FontAttributes="Bold"/>
+
+                <ListView x:Name="AvailableCharactersListView" 
+                    ItemsSource="{Binding AvailableCharacters}"
+                    VerticalOptions="FillAndExpand"
+                     HasUnevenRows="true"
+                     RefreshCommand="{Binding LoadItemsCommand}"
+                     IsPullToRefreshEnabled="true"
+                     IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+                     CachingStrategy="RecycleElement"
+                     ItemSelected="OnAvailableCharacterItemSelected">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+
+                                <StackLayout
+                             Orientation="Horizontal"
+                             VerticalOptions="Start"
+                             HorizontalOptions="Center">
+                             
+                                    <StackLayout>
+                                        <StackLayout Orientation="Horizontal">
+                                            <Label Text="{Binding Name}" 
+                                                   TextColor="Teal"
+                                                   LineBreakMode="NoWrap"
+                                                   Style="{DynamicResource ListItemTextStyle}" />
+                                            <Label Text="Lvl:" 
+                                                   TextColor="White"/>
+                                            <Label Text="{Binding Level}" 
+                                                   TextColor="Teal"
+                                                   LineBreakMode="NoWrap" 
+                                                   Style="{DynamicResource ListItemTextStyle}" />
+                                        </StackLayout>
+                                    </StackLayout>
+                                </StackLayout>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackLayout>
             
-            <StackLayout>
-                <StackLayout>
-                    <Label Text="Slot 1:"
-                           TextColor="White"
-                           HorizontalOptions="Start"/>
-                   
-                    <Picker Title="Narwhal 1"
-                            TextColor="Teal"
-                            ItemsSource="{Binding Data}"
-                            ItemDisplayBinding="{Binding Name}" />
+            <Grid HorizontalOptions="Center">
+                <StackLayout Grid.Row="0"
+                       Grid.Column="0">
+                <Label Text="Party Count"
+                       FontAttributes="Bold"
+                       />
                 </StackLayout>
                 
-                <!-- copy 5 more times for other slots -->
-                
+                <StackLayout Grid.Row="0"
+                       Grid.Column="1">
+                <Label 
+                    Text="0"
+                    x:Name="PartyCountLabel"
+                        FontAttributes="Bold"
+                        TextColor="White"
+                   />
+                </StackLayout>
+            </Grid>
+            <StackLayout>
             </StackLayout>
+            
+            <ListView x:Name="SelectedCharactersListView" 
+                ItemsSource="{Binding SelectedCharacters}"
+                VerticalOptions="FillAndExpand"
+                HasUnevenRows="true"
+                RefreshCommand="{Binding LoadItemsCommand}"
+                IsPullToRefreshEnabled="true"
+                IsRefreshing="{Binding IsBusy, Mode=OneWay}"
+                CachingStrategy="RecycleElement"
+                ItemSelected="OnSelectedCharacterItemSelected">
+                
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+
+                        <StackLayout
+                             Orientation="Horizontal"
+                             VerticalOptions="Start"
+                             HorizontalOptions="Center">
+
+                                <StackLayout>
+                                    <StackLayout Orientation="Horizontal">
+                                        <Label Text="{Binding Name}" 
+                                               TextColor="Teal"
+                                               LineBreakMode="NoWrap" 
+                                               Style="{DynamicResource ListItemTextStyle}" />
+                                        <Label Text="Lvl:" TextColor="White" />
+                                        <Label Text="{Binding Level}" 
+                                               TextColor="Teal"
+                                               LineBreakMode="NoWrap" 
+                                               Style="{DynamicResource ListItemTextStyle}" />
+                                    </StackLayout>
+                                </StackLayout>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
