Add messagebox and next button for InBattlePage

--- a/Crawl/Crawl/Views/Battle/BattleOverPage.xaml
+++ b/Crawl/Crawl/Views/Battle/BattleOverPage.xaml
@@ -41,8 +41,7 @@
                     Text="0"
                     x:Name="DamageDealt"
                         FontAttributes="Bold"
-                        TextColor="Teal"
-                   />
+                        TextColor="Teal" />
                 
                 <Button Text="CONTINUE..."
                         VerticalOptions="End" 
