Add UX for ItemDropPage

--- a/Crawl/Crawl/Views/Battle/ItemDropPage.xaml
+++ b/Crawl/Crawl/Views/Battle/ItemDropPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              x:Class="Crawl.Views.ItemDropPage">
-    <ContentPage.Content>
+    <ScrollView>
         <StackLayout
          VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand">
@@ -14,13 +14,99 @@
                        TextColor="Teal"/>
 
                 <StackLayout
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand">
+                     Orientation="Horizontal"
+                     VerticalOptions="Start"
+                     HorizontalOptions="Center">
+                    <StackLayout 
+                        x:Name="DetailsRoot"
+                        Orientation="Vertical"
+                        Padding="15">
 
-                
+                        <Image Source="{Binding Data.ImageURI}"
+                            WidthRequest="150"
+                            HeightRequest="150" 
+                            HorizontalOptions="Center"
+                            VerticalOptions="Center"/>
+
+                        <Label Text="Name : " 
+                               TextColor="Teal"
+                           FontSize="Medium" 
+                           HorizontalOptions="Start"/>
+                        <Label Text="{Binding Data.Name}" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Center"/>
+                        
+                        <Label Text="Description : " 
+                               TextColor="Teal"
+                           FontSize="Medium" 
+                           HorizontalOptions="Start"/>
+                        <Label Text="{Binding Data.Description}" 
+                            FontSize="Medium" 
+                            HorizontalOptions="Center"/>
+
+                        <StackLayout
+                            Orientation="Horizontal"
+                            HorizontalOptions="Start">
+                            <Label Text="Range : " 
+                                   TextColor="Teal"
+                               FontSize="Medium" 
+                               HorizontalOptions="Start"/>
+                            <Label Text="{Binding Data.Range}" 
+                                FontSize="Medium" 
+                                HorizontalOptions="Center"/>
+                        </StackLayout>
+
+                        <StackLayout
+                            Orientation="Horizontal"
+                            HorizontalOptions="Start">
+                            <Label Text="Damage : " 
+                                   TextColor="Teal"
+                               FontSize="Medium" 
+                               HorizontalOptions="Start"/>
+                            <Label Text="{Binding Data.Damage}" 
+                                FontSize="Medium" 
+                                HorizontalOptions="Center"/>
+                        </StackLayout>
+                        
+                        <StackLayout
+                            Orientation="Horizontal"
+                            HorizontalOptions="Start">
+                            <Label Text="Value : " 
+                                   TextColor="Teal"
+                               FontSize="Medium" 
+                               HorizontalOptions="Start"/>
+                            <Label Text="{Binding Data.Value}" 
+                                FontSize="Medium" 
+                                HorizontalOptions="Center"/>
+                        </StackLayout>
+                        
+                        <StackLayout
+                            Orientation="Horizontal"
+                            HorizontalOptions="Start">
+                            <Label Text="Location : " 
+                                   TextColor="Teal"
+                               FontSize="Medium" 
+                               HorizontalOptions="Start"/>
+                            <Label Text="{Binding Data.Location}" 
+                                FontSize="Medium" 
+                                HorizontalOptions="Center"/>
+                        </StackLayout>
+
+                        <StackLayout 
+                            Orientation="Horizontal" 
+                            HorizontalOptions="Start">
+                        <Label Text="Attribute : " 
+                               TextColor="Teal"
+                               FontSize="Medium" 
+                               HorizontalOptions="Start"/>
+                        <Label Text="{Binding Data.Attribute}" 
+                               FontSize="Medium" 
+                               HorizontalOptions="Center"/>
+                        </StackLayout>
+                    </StackLayout>
                 </StackLayout>
 
                 <Button Clicked="OnNextClicked" Text="Next"/>
         </StackLayout>
-    </ContentPage.Content>
+    </ScrollView>
 </ContentPage>
