Refactor OpeningPage (character-select

--- a/Crawl/Crawl/Views/Battle/OpeningPage.xaml
+++ b/Crawl/Crawl/Views/Battle/OpeningPage.xaml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Crawl.Views.OpeningPage"
+             x:Class="Crawl.Views.Battle.OpeningPage"
              Title="Narwhal Select">
     
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Next" Clicked="OnNextClicked"/>
     </ContentPage.ToolbarItems>
     
-    <ContentPage.Content>
+    <ScrollView>
         <StackLayout>
             <StackLayout HorizontalOptions="CenterAndExpand">
                 
@@ -113,6 +112,14 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+            
+             <Button 
+                x:Name="NextButton"
+                HorizontalOptions="CenterAndExpand"
+                Clicked="OnNextClicked" 
+                Text="Next"
+                IsEnabled="False"
+                /> 
         </StackLayout>
-    </ContentPage.Content>
+    </ScrollView>
 </ContentPage>
