--- a/Crawl/Crawl/Views/Battle/BattleMonsterListPage.xaml
+++ b/Crawl/Crawl/Views/Battle/BattleMonsterListPage.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Crawl.Views.BattleMonsterListPage"
+             x:Class="Crawl.Views.Battle.BattleMonsterListPage"
              Title="Incoming Boss">
 
     <ContentPage.Content>
