Refactor app UI to use a NavPage instead of a TabbedPage

--- a/Crawl/Crawl/Views/MainPage.xaml
+++ b/Crawl/Crawl/Views/MainPage.xaml
@@ -1,63 +1,18 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms" 
+                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                  xmlns:views="clr-namespace:Crawl.Views"
+                  x:Class="Crawl.Views.MainPage">
 
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:views="clr-namespace:Crawl.Views"
-            x:Class="Crawl.Views.MainPage">
-    <TabbedPage.Children>
-        <NavigationPage Title="主页">
-             <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-        
-        <NavigationPage Title="事">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ItemsPage />
-            </x:Arguments>
-        </NavigationPage>
+    <MasterDetailPage.Master>
+        <views:MenuPage />
+    </MasterDetailPage.Master>
 
-        <NavigationPage Title="英雄">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
+    <MasterDetailPage.Detail>
+        <NavigationPage>
             <x:Arguments>
-                <views:CharactersPage />
+                <views:AboutPage/>
             </x:Arguments>
         </NavigationPage>
-
-        <NavigationPage Title="怪物">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:MonstersPage />
-            </x:Arguments>
-        </NavigationPage>
-
-        <NavigationPage Title="结果">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:ScoresPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>  
-</TabbedPage>
+    </MasterDetailPage.Detail>
+</MasterDetailPage>
