--- a/Crawl/Crawl/App.xaml
+++ b/Crawl/Crawl/App.xaml
@@ -7,29 +7,16 @@
 
             <Color x:Key="ButtonBackgroundColor">#D9AD90</Color>
             
-            <Color x:Key="Primary">#A56757</Color>
+            <Color x:Key="Primary">#00FFC8</Color>
             <Color x:Key="PrimaryDark">#72342C</Color>
-            <Color x:Key="Accent">#D9AD90</Color>
+            <Color x:Key="Accent">#7CA4E5</Color>
 
-            <Color x:Key="LightBackgroundColor">#E8D0B6</Color>
-            <Color x:Key="AccentBackground">#EFDAC5</Color>
+            <Color x:Key="LightBackgroundColor">#4D668F</Color>
+            <Color x:Key="AccentBackground">#4D668F</Color>
 
-            <Color x:Key="TextPrimary">#696969</Color>
-            <Color x:Key="TextAccent">#A56757</Color>
+            <Color x:Key="TextPrimary">#FFFFFF</Color>
+            <Color x:Key="TextAccent">#005985</Color>
             <Color x:Key="TextDark">#272425</Color>
-
-
-            <!--Color Sceme
-                https://color.adobe.com/cobre-color-theme-11990038/
-                Cobre Colors
-            
-                E8D0B6  - Light
-                EFDAC5  - Med Light
-                D9AD90  - Middle
-                A56757  - Med Dark
-                72342C  - Very Dark
-                272425  - Black
-            -->
 
             <Style TargetType="Entry">
                 <Setter Property="BackgroundColor" Value="{StaticResource LightBackgroundColor}" />
