--- a/Crawl/Crawl/App.xaml
+++ b/Crawl/Crawl/App.xaml
@@ -49,7 +49,7 @@
                 <Setter Property="TextColor" Value="{StaticResource TextPrimary}" />
                 <Setter Property="FontAttributes" Value="None" />
                 <Setter Property="FontSize" Value="Small" />
-                <Setter Property="LineBreakMode" Value="NoWrap" />
+                <Setter Property="LineBreakMode" Value="WordWrap" />
             </Style>
 
             <Style TargetType="Label"
