Add functionality to BattleOver Page button to take back to main screen

--- a/Crawl/Crawl/Views/Battle/BattleOverPage.xaml
+++ b/Crawl/Crawl/Views/Battle/BattleOverPage.xaml
@@ -46,6 +46,7 @@
                 <Button Text="CONTINUE..."
                         VerticalOptions="End" 
                         HorizontalOptions="CenterAndExpand" 
+                        Clicked="OnNextClicked"
                         />
             </StackLayout>
         </StackLayout>
