Enable Debug settings for critical hit double damage and critical miss

--- a/Crawl/Crawl/Views/AboutPage.xaml
+++ b/Crawl/Crawl/Views/AboutPage.xaml
@@ -131,7 +131,6 @@
             </StackLayout>
 
 
-            <!--
             <StackLayout 
                 Margin="0,50,0,0"
                     HorizontalOptions="CenterAndExpand"
@@ -196,7 +195,7 @@
                         IsToggled="False"/>
                     </StackLayout>
                 </StackLayout>
-            </StackLayout> -->
+            </StackLayout>
             <StackLayout>
                 <Label
                     Text="Creators: Thomas Chin | Fisher Harris"/>
